--- a/WeatherApp/WA-Front/Resources/Styles/Styles.xaml
+++ b/WeatherApp/WA-Front/Resources/Styles/Styles.xaml
@@ -36,10 +36,13 @@
         </Setter>
     </Style>
 
+    <Style TargetType="Label" ApplyToDerivedTypes="True">
+        <Setter Property="FontFamily" Value="RubikLight"/>
+    </Style>
+    
     <Style TargetType="Label" x:Key="PrimaryLabel" ApplyToDerivedTypes="True" CanCascade="True">
         <Setter Property="TextColor" Value="{StaticResource Secondary}" />
         <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
-        <Setter Property="FontFamily" Value="OpenSansRegular" />
         <Setter Property="FontSize" Value="14" />
         <Setter Property="HorizontalTextAlignment" Value="Center"/>
         <Setter Property="VerticalTextAlignment" Value="Center"/>
@@ -49,7 +52,6 @@
     <Style TargetType="Label" x:Key="SecondaryLabel" ApplyToDerivedTypes="True" CanCascade="True">
         <Setter Property="TextColor" Value="{StaticResource Primary}" />
         <Setter Property="BackgroundColor" Value="{StaticResource Secondary}" />
-        <Setter Property="FontFamily" Value="OpenSansRegular" />
         <Setter Property="FontSize" Value="14" />
         <Setter Property="HorizontalTextAlignment" Value="Center"/>
         <Setter Property="VerticalTextAlignment" Value="Center"/>
@@ -59,7 +61,6 @@
     <Style TargetType="Label" x:Key="AccentLabel" ApplyToDerivedTypes="True" CanCascade="True">
         <Setter Property="TextColor" Value="{StaticResource Secondary}" />
         <Setter Property="BackgroundColor" Value="{StaticResource Accent}" />
-        <Setter Property="FontFamily" Value="OpenSansRegular" />
         <Setter Property="FontSize" Value="14" />
         <Setter Property="HorizontalTextAlignment" Value="Center"/>
         <Setter Property="VerticalTextAlignment" Value="Center"/>
@@ -69,7 +70,6 @@
     <Style TargetType="Label" x:Key="SecondaryAccentLabel" ApplyToDerivedTypes="True" CanCascade="True">
         <Setter Property="TextColor" Value="{StaticResource Accent}" />
         <Setter Property="BackgroundColor" Value="{StaticResource Secondary}" />
-        <Setter Property="FontFamily" Value="OpenSansRegular" />
         <Setter Property="FontSize" Value="14" />
         <Setter Property="HorizontalTextAlignment" Value="Center"/>
         <Setter Property="VerticalTextAlignment" Value="Center"/>
@@ -79,7 +79,6 @@
     <Style TargetType="Label" x:Key="SwitchLabel">
         <Setter Property="TextColor" Value="{StaticResource Secondary}" />
         <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
-        <Setter Property="FontFamily" Value="OpenSansRegular" />
         <Setter Property="FontSize" Value="14" />
         <Setter Property="HorizontalTextAlignment" Value="Center"/>
         <Setter Property="VerticalTextAlignment" Value="Center"/>
@@ -112,6 +111,8 @@
         <Setter Property="TextColor" Value="{StaticResource Secondary}"/>
         <Setter Property="PlaceholderColor" Value="{StaticResource Primary}"/>
         <Setter Property="Shadow.Brush" Value="{StaticResource SecondaryBrush}"/>
+        <Setter Property="FontFamily" Value="RubikLight"/>
+        <Setter Property="IsSpellCheckEnabled" Value="False"/>
     </Style>
 
     <Style TargetType="Page">
