--- a/WeatherApp/WA-Front/View/CurrentView.xaml
+++ b/WeatherApp/WA-Front/View/CurrentView.xaml
@@ -26,7 +26,7 @@
                        Text="{Binding Temperature, StringFormat='{0}°C'}"/>
                 <Image Grid.Row="0" 
                        Grid.Column="1"
-                       Source="p50.png"
+                       Source="{Binding WeatherImage, StringFormat='{0}.png'}"
                        Aspect="AspectFill"/>
                 <BoxView Grid.Row="0"
                          Grid.ColumnSpan="2"
@@ -60,8 +60,8 @@
                 </CollectionView.ItemsLayout>
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="model:DayPartWeatherModel">
-                        <Grid RowDefinitions="*,Auto,*" 
-                              ColumnDefinitions="Auto,*"
+                        <Grid RowDefinitions="*,50,*" 
+                              ColumnDefinitions="50,*"
                               BackgroundColor="{StaticResource Secondary}"
                               HeightRequest="{Binding Height, Source={x:Reference frame}}">
                             <Label Grid.Row="0" 
@@ -71,9 +71,8 @@
                                    Text="{Binding Part}"/>
                             <Image Grid.Row="1" 
                                    Grid.Column="0" 
-                                   Source="{Binding Data.Data.WeatherImage, StringFormat='p50.png'}"
-                                   BackgroundColor="{StaticResource Accent}"
-                                   Aspect="Center"/>
+                                   Source="{Binding Data.Data.WeatherImage, StringFormat='{0}.png'}"
+                                   BackgroundColor="{StaticResource Accent}"/>
                             <Label Grid.Row="1" 
                                    Grid.Column="1" 
                                    Style="{StaticResource AccentLabel}"
